eval_outputs/diff_and_source_code/code_change/fourth/google/27_B_Model/refined_chain-of-thought.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_chain-of-thought.spec.ts: Unexpected token (129:19)

  127 |       setFormBody("")
  128 |       setFormTags("")
> 129 |     } catch (err) {
      |                    ^

   at refined_chain-of-thought.spec.ts:129

  127 |       setFormBody("")
  128 |       setFormTags("")
> 129 |     } catch (err) {
      |                   ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

